feat: use Centroid function for DE/TEI OU Values [DHIS2-19681] (#21725)
* feat: use Centroid function for DE/TEI OU Values [DHIS2-19681]

* Fix sonarqube issue